styles mostly in place

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <link rel="stylesheet" href="https://use.typekit.net/gha7stj.css">
 <link rel="stylesheet" href="css/style.css">
 
@@ -15,25 +14,18 @@
 
 <body>
 
-<main id="calculator" class="container">
+<main id="calculator">
 	
-	<header class="row calc">
-		<div class="col s6">
-			<p><a id="calc">Calculator</a></p>
-		</div>
-		<div class="col s6">
-			<p><a id="tip">Tip Helper</a></p>
-		</div>
-		<div id="bar" class="col s12">
-			<div class="fill"></div>
-		</div>
+	<header class="calc">
+		<p><a id="calc">Calculator</a></p>
+		<p><a id="tip">Tip Helper</a></p>
+		<div id="bar"><div class="fill"></div></div>
 	</header>
 	
-	<section id="content" class="row"></section>
+	<section id="content"></section>
 	
 </main>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/main.js"></script>
 
